
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_2__ TYPE_1__ ;


typedef int u64 ;
struct tree_mod_root {int level; int logical; } ;
struct tree_mod_elem {scalar_t__ op; int generation; struct tree_mod_root old_root; } ;
struct extent_buffer {int start; } ;
struct TYPE_2__ {int objectid; } ;
struct btrfs_root {TYPE_1__ root_key; struct extent_buffer* node; int nodesize; int fs_info; } ;


 int BTRFS_MIXED_BACKREF_REV ;
 scalar_t__ MOD_LOG_ROOT_REPLACE ;
 int WARN_ON (int) ;
 struct tree_mod_elem* __tree_mod_log_oldest_root (int ,struct btrfs_root*,int ) ;
 int __tree_mod_log_rewind (struct extent_buffer*,int ,struct tree_mod_elem*) ;
 struct extent_buffer* alloc_dummy_extent_buffer (int ,int ) ;
 struct extent_buffer* btrfs_clone_extent_buffer (struct extent_buffer*) ;
 scalar_t__ btrfs_header_level (struct extent_buffer*) ;
 struct extent_buffer* btrfs_read_lock_root_node (struct btrfs_root*) ;
 int btrfs_set_header_backref_rev (struct extent_buffer*,int ) ;
 int btrfs_set_header_bytenr (struct extent_buffer*,int ) ;
 int btrfs_set_header_generation (struct extent_buffer*,int ) ;
 int btrfs_set_header_level (struct extent_buffer*,int ) ;
 int btrfs_set_header_owner (struct extent_buffer*,int ) ;
 int btrfs_tree_read_lock (struct extent_buffer*) ;
 int btrfs_tree_read_unlock (struct extent_buffer*) ;
 int extent_buffer_get (struct extent_buffer*) ;
 int free_extent_buffer (struct extent_buffer*) ;
 struct tree_mod_elem* tree_mod_log_search (int ,int ,int ) ;

__attribute__((used)) static inline struct extent_buffer *
get_old_root(struct btrfs_root *root, u64 time_seq)
{
 struct tree_mod_elem *tm;
 struct extent_buffer *eb;
 struct tree_mod_root *old_root = ((void*)0);
 u64 old_generation = 0;
 u64 logical;

 eb = btrfs_read_lock_root_node(root);
 tm = __tree_mod_log_oldest_root(root->fs_info, root, time_seq);
 if (!tm)
  return root->node;

 if (tm->op == MOD_LOG_ROOT_REPLACE) {
  old_root = &tm->old_root;
  old_generation = tm->generation;
  logical = old_root->logical;
 } else {
  logical = root->node->start;
 }

 tm = tree_mod_log_search(root->fs_info, logical, time_seq);
 if (old_root)
  eb = alloc_dummy_extent_buffer(logical, root->nodesize);
 else
  eb = btrfs_clone_extent_buffer(root->node);
 btrfs_tree_read_unlock(root->node);
 free_extent_buffer(root->node);
 if (!eb)
  return ((void*)0);
 btrfs_tree_read_lock(eb);
 if (old_root) {
  btrfs_set_header_bytenr(eb, eb->start);
  btrfs_set_header_backref_rev(eb, BTRFS_MIXED_BACKREF_REV);
  btrfs_set_header_owner(eb, root->root_key.objectid);
  btrfs_set_header_level(eb, old_root->level);
  btrfs_set_header_generation(eb, old_generation);
 }
 if (tm)
  __tree_mod_log_rewind(eb, time_seq, tm);
 else
  WARN_ON(btrfs_header_level(eb) != 0);
 extent_buffer_get(eb);

 return eb;
}
